{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 13,
  "lineage": "737daf55-3656-700d-3734-3564a020eccc",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005e54dee72cc1d00",
            "arn": "arn:aws:ec2:us-west-1::instance/i-5a927645fa4020efc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-5a927645fa4020efc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "None",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-7cb13999"
              }
            ],
            "primary_network_interface_id": "eni-7cb13999",
            "private_dns": "ip-10-104-253-155.ec2.internal",
            "private_ip": "10.104.253.155",
            "public_dns": "ec2-54-214-133-208.compute-1.amazonaws.com",
            "public_ip": "54.214.133.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-d5e2ff46",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8250586f",
            "tenancy": "default"
          },
          "dependencies": [
            "module.network.aws_network_interface.public_interface",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "None",
            "id": "eni-7cb13999",
            "ipv6_address_count": 0,
            "mac_address": "0e:a3:a7:7b:95:a7",
            "private_dns_name": "ip-10-0-0-134.us-west-2.compute.internal",
            "private_ip": "10.104.253.155",
            "private_ips": [
              "10.104.253.155"
            ],
            "private_ips_count": 0,
            "source_dest_check": false,
            "subnet_id": "subnet-8250586f",
            "tags": {
              "Name": "public_network_interface"
            },
            "tags_all": {
              "Name": "public_network_interface"
            }
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111122223333:subnet/subnet-e51da703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.123.0.128/25",
            "id": "subnet-e51da703",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111122223333",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-a9f75ece"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111122223333:subnet/subnet-8250586f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.123.0.0/25",
            "id": "subnet-8250586f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111122223333",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-a9f75ece"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1::vpc/vpc-a9f75ece",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/24",
            "default_network_acl_id": "acl-fe5749fd",
            "default_route_table_id": "rtb-a18b4557",
            "default_security_group_id": "sg-920f62a1",
            "dhcp_options_id": "dopt-7a8b9c2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a9f75ece",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a18b4557",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.external_access",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1::route-table/rtb-a18b4557",
            "default_route_table_id": "rtb-a18b4557",
            "id": "rtb-a18b4557",
            "owner_id": "",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "mtc_private"
            },
            "tags_all": {
              "Name": "mtc_private"
            },
            "vpc_id": "vpc-a9f75ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.external_access",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1::internet-gateway/igw-7995d290",
            "id": "igw-7995d290",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-a9f75ece"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.external_access",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-7995d290",
            "id": "r-rtb-9c6c17941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-9c6c1794",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.network.module.external_access.aws_internet_gateway.internet_gateway",
            "module.network.module.external_access.aws_route_table.public_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.external_access",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1::route-table/rtb-9c6c1794",
            "id": "rtb-9c6c1794",
            "owner_id": "",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "vpc_id": "vpc-a9f75ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.external_access",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:000000000000:security-group/sg-06352c52",
            "description": "Security group for public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-06352c52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a9f75ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.external_access",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:000000000000:vpc-endpoint/vpce-a9f75ece",
            "id": "vpce-a9f75ece",
            "owner_id": "000000000000",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-west-1.dynamodb",
            "state": "available",
            "subnet_ids": [
              "subnet-e51da703"
            ],
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-a9f75ece"
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}